--- a/session4/baitap/baitap12.html
+++ b/session4/baitap/baitap12.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>My Personal Blog</h1>
+    <p>Thoughts, Stories, add Ideas</p>
+    <img src="https://media.istockphoto.com/id/1451088545/vi/anh/n%C6%B0%E1%BB%9Bc-tinh-khi%E1%BA%BFt-r%C3%B3t-v%C3%A0o-ly-u%E1%BB%91ng-tr%C3%AAn-%C4%91%C3%A1-trong-r%E1%BB%ABng.jpg?s=612x612&w=0&k=20&c=RnvZdW0k6Ufkjpov9ib_bheddT8jPiw-Pv3VT_k4XaQ=" width="600" height="300" alt="">
+    <ul>
+        <li><u>Home</u></li>
+        <li><u>Posts</u></li>
+        <li><a href="">About</a></li>
+    </ul>
+    <h3>Welcome to My Blog!</h3>
+    <p>Here, I share my experiences, thoughts, and tutirial on various topics.</p>
+    <img src="" alt="">
+    <p>Welcome Image</p>
+    <h3>Recent Pots</h3>
+    <h4>How I Started Web Development</h4>
+    <p>Posted on February 10,2025</p>
+    <img src="https://images.pexels.com/photos/3183126/pexels-photo-3183126.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="312" height="204" alt="">
+    <p>Web development has been an amazing journey. In this post, I'll share how I got started...</p>
+    <a href="">Read More</a>
+
 </body>
 </html>
