--- a/session4/baitap/baitap10.html
+++ b/session4/baitap/baitap10.html
@@ -55,6 +55,14 @@
    
     <button type="send">Send</button>
     </form><br><br><br>
-    
+    <h2>Featured Video</h2>
+    <video width="600" height="300" controls>
+        <source src="/session4/Logo Elearning 2.mp4" type="video/mp4">
+        <source src="/session4/Logo Elearning 2.ogg" type="video/ogg">
+
+       
+    </video><br><br>
+    <p>&#x00A9; 2024 John Doe</p>
+    <a href="">LinkedIn |Github</a>
 </body>
 </html>
