--- a/session1/Bai_tap/baitap10.html
+++ b/session1/Bai_tap/baitap10.html
@@ -11,13 +11,14 @@
    <h2>Về Chúng Tôi</h2>
    <p>Chúng tôi là một nhóm <span style="background-color: rgb(234, 255, 0);">đam mê công nghệ</span>, khám phá những đổi mới trong Al, Blockchain, và nhiều hơn thế. </p>
    <h2>Dịch Vụ Chính</h2>
-   <blockquote>
-    <p>• Phát triển phần mềm - Giải pháp tối ưu cho doanh nghiệp</p>
-    <p>• <span style="background-color: yellow;">Trí tuệ nhân tạo</span> - Nâng cao hiệu suất và sáng tạo</p>
-    <p>• IoT - Kết nối thế giới thông minh</p>
-    </blockquote>
+   <ul>
+    <li><u>Phát triển phần mềm </u> - Giải pháp tối ưu cho doanh nghiệp</li>
+    <li><span style="background-color: yellow;">Trí tuệ nhân tạo</span> - Nâng cao hiệu suất và sáng tạo</li>
+    <li>IoT - Kết nối thế giới thông minh</li>
+   </ul>
+    
     <h2>Tiêu Điểm Công Nghệ</h2>
-    <blockquote>
+    
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJ4XOWDHmJFPQ0jaacm23jnSEwVuzGdULR3A&s">
         <p>Khám phá công nghệ hiện đại giúp thay đổi tương lai.</p>
     </blockquote>
