--- a/session1/Bai_tap/baitap3.html
+++ b/session1/Bai_tap/baitap3.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Sở thích của tôi</h1>
     <ul>
-        <ol> •Sở thích 1</ol>
-        <ol> •Sở thích 2</ol>
-        <ol> •Sở thích 3</ol>
+        <li> Sở thích 1</li>
+        <li> Sở thích 2</li>
+        <li> Sở thích 3</li>
     </ul>
 
 
