--- a/session1/Bai_tap/baitap5.html
+++ b/session1/Bai_tap/baitap5.html
@@ -9,7 +9,7 @@
    <h1>Đây là trang web của tôi</h1>
    <p>Chào mừng đến với trang web của tôi, Đây là một ví dụ về cách sử dụng thẻ <br>img để hiển thị hình ảnh trên một trang web</p>
    <img src="https://d1hjkbq40fs2x4.cloudfront.net/2017-08-21/files/landscape-photography_1645.jpg" width="500" height="500">
-  
+   <p>Trên đây là một hình ảnh ngẫu nhiên được sử dụng từ trang web unsplash. <br>bạn có thể thay đổi kích thước hình ảnh bằng cách chỉnh độ rộng chiều cao trong thuộc tính 'width' và 'height' của thẻ. Bạn có thể thêm một mô tả hình <br>ảnh bằng thuộc tính 'alt'</p>
    
 
 
