--- a/session1/Bai_tap/baitap6.html
+++ b/session1/Bai_tap/baitap6.html
@@ -18,12 +18,12 @@
     <p>• ReactJS, Angular</p>
     <p>• Git, GitHub</p>
     <h3>Kinh nghiệm làm việc</h3>
-    <p><bold>• Công ty XYZ (01/2020 - Hiện tại)</bold></p>
+    <p><b>• Công ty XYZ (01/2020 - Hiện tại)</b></p>
     <p> Vị trí: Lập trình viên Frontend</p>
-    <p><bold>• Công ty ABC (06/2018 - 12/2019)</bold></p>
+    <p><b>• Công ty ABC (06/2018 - 12/2019)</b></p>
     <p> Vị trí: Thực tập sinh phát triển web</p>
     <h3>Học vấn</h3>
-    <p><bold>• Đại học Công nghệ Thông tin</bold></p>
+    <p><b>• Đại học Công nghệ Thông tin</b></p>
     <p> Chuyên ngành: Khoa học máy tính</p>
     <p> Thời gian: 2015 - 2019</p>
     <P>@2024 Nguyễn Văn A</P>
