--- a/session7/baitap/baitap5.html
+++ b/session7/baitap/baitap5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bài tập 5</title>
     <link rel="stylesheet" href="./baitap5.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -25,11 +25,11 @@
             <hr>
             <p>Giá: <span class="text">160.000 đ</span> </b></p>
             <hr>
-            <p>Nội mạng: <span class="text">10 phút ( tối đa 1000 phút 30 ngày)</span></p>
+            <p>Nội mạng: <span class="text">10 phút ( tối đa 1000 <br> phút 30 ngày)</span></p>
             <hr>
             <p>Ngoại mạng: <span class="text">100 phút</span> </p>
             <hr>
-            <p>Free data: <span class="text">TV360 Basic, 20Gb lưu lượng Mybox</span></p>
+            <p>Free data: <span class="text">TV360 Basic, 20Gb lưu <br> trữ lượng Mybox</span></p>
             <hr>
             <p>Thời hạn: <span class="text">30 ngày</span> </p>
             <hr>
