--- a/session8/baitap/baitap2.html
+++ b/session8/baitap/baitap2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài tập 2</title>
-    <link rel="stylesheet" href="./baitap/baitap2.css">
+  
+    <link rel="stylesheet" href="./baitap2.css">
 </head>
 <body>
     <div>
