--- a/session9/baitap/baitap7.html
+++ b/session9/baitap/baitap7.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài tập 7</title>
+    <link rel="stylesheet" href="./baitap7.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
+    <header>
+        <div class="div1">
+            <div class="div2">
+              <h3>MY BLOG</h3>  
+            </div>
+            <div class="div3">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Posts</a>
+                <a href="">Contect</a>
+            </div>
+            
+
+
+        </div>
+    </header>
+    
+
+    <main>
+        <section class="featured-post">
+            <h2>Bài viết nổi bật</h2>
+            <h3>Tiêu đề bài viết chính</h3>
+            <p>Lore ipsum dolor sit amet, consectetur adipiscing elit. Donec ut nulla eu lorem tincidunt tristique.</p>
+            <a href="">Đọc thêm</a>
+        </section>
+
+        <section class="class1">
+            <h2>Các bài viết khác</h2>
+            <ul>
+                <li><a href="">Bài viết 1</a><p>Lorem ipsum dolor sit amet...</p></li>
+                <li><a href="">Bài viết 2</a><p>Ut nulla eu lorem tincidunt...</p></li>
+                <li><a href="">Bài viết 3</a><p>Consectetur adipiscing elit...</p></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 My Blog. All rights reserved.</p>
+    </footer>
 </body>
 </html>
