--- a/session11/baitap/bt6.html
+++ b/session11/baitap/bt6.html
@@ -10,8 +10,8 @@
     <header class="top hdr">HEADER</header>
     <main class="content">
         <section class="main">CONTENT</section>
-        <div class="feat">
-            <div class="sign">SIGN UP</div>
+        <div class="midi">
+            <div class="sos">SIGN UP</div>
             <div class="box">FEATURE</div>
             <div class="box">FEATURE</div>
             <div class="box">FEATURE</div>
