--- a/session11/baitap/bt4.html
+++ b/session11/baitap/bt4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bài tập 4</title>
     <link rel="stylesheet" href="./bt4.css">
 </head>
 
