--- a/session1/Bai_tap/baitap9.html
+++ b/session1/Bai_tap/baitap9.html
@@ -12,9 +12,13 @@
     <h3><bold>About Me</bold></h3>
     <p>My name is <strong>John Doe</strong>. I love <em>writing</em> and <u>exploring new ideas</u>.</p>
     <h3><bold>My Favorite Activities</bold></h3>
-    <p><strong>• Reading</strong></p>
-    <p><em>• Traveling</em></p>
-    <p><u>• Photography</u></p>
+    <ul>
+        <li><b>Reading</b></li>
+        <li><em>Traveling</em></li>
+        <li><u>Photography</u></li>
+    </ul>
+    
+    
     <h3><bold>Things I Want to Do</bold></h3>
     <p>1. Visit Japan</p>
     <p>2. Write a book</p>
