--- a/session31/baitap/s7.html
+++ b/session31/baitap/s7.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bài tập 7</title>
     <link rel="stylesheet" href="./b7.css">
     <style>
         body {
