--- a/session32/baitap/s4.html
+++ b/session32/baitap/s4.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài tập 4</title>
-    <style>
-        button{
-            margin-top: 5px;
-        }
-    </style>
 </head>
 <body>
-    <input type="text" placeholder="Vui lòng nhập vào email">
-    <br><button onclick="">check</button>
+    <input type="search" name=" " id="inputText">
+    <span id="validate">
+        <p></p>
+    </span>
+    <button onclick="checkValue()">check</button>
     <script src="./s4.js"></script>
 </body>
 </html>
