--- a/session35/s5.html
+++ b/session35/s5.html
@@ -8,177 +8,203 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="b5.css">
     <style>
         #header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
+
         #header span {
-        font-size: 30px;
+            font-size: 30px;
         }
 
         #header button {
-        width: 200px;
-        height: 30px;
-        font-size: 15px;
-        color: white;
-        background-color: #4094F7;
-        border-radius: 5px;
-        border: none;
+            width: 200px;
+            height: 30px;
+            font-size: 15px;
+            color: white;
+            background-color: #4094F7;
+            border-radius: 5px;
+            border: none;
 
         }
+
         #fontInput {
-        display: flex;
-        justify-content: space-between;
+            display: flex;
+            justify-content: space-between;
         }
 
         #findNameInput {
-        height: 25px;
-        width: 200px;
-        border-radius: 5px 0px 0px 5px;
+            height: 25px;
+            width: 200px;
+            border-radius: 5px 0px 0px 5px;
         }
 
         select {
-        height: 30px;
-        width: 200px;
-        border-radius: 5px;
+            height: 30px;
+            width: 200px;
+            border-radius: 5px;
         }
 
         #findButton {
-        height: 31px;
-        width: 30px;
-        border-radius: 0px 5px 5px 0px;
-        position: relative;
-        right: 5px;
+            height: 31px;
+            width: 30px;
+            border-radius: 0px 5px 5px 0px;
+            position: relative;
+            right: 5px;
         }
+
         #fontTable {
-        margin-left: auto;
-        margin-right: auto;
+            margin-left: auto;
+            margin-right: auto;
         }
+
         .td1 {
-        width: 400px;
-        height: 3px;
+            width: 400px;
+            height: 3px;
         }
+
         .tdHeader {
-        background-color: #F9FAFB;
+            background-color: #F9FAFB;
         }
+
         .td2 {
-        width: 600px;
+            width: 600px;
 
         }
+
         .td3 {
-        width: 250px;
+            width: 250px;
         }
+
         .td4 {
-        width: 250px;
+            width: 250px;
 
         }
+
         .trashButton {
-        border: none;
-        background: none;
-        color: red;
+            border: none;
+            background: none;
+            color: red;
         }
+
         .penButton {
-        border: none;
-        background: none;
-        color: yellow;
+            border: none;
+            background: none;
+            color: yellow;
         }
+
         .hide {
-        display: none;
+            display: none;
         }
+
         #addGui {
-        position: fixed;
-        height: 450px;
-        width: 600px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #ffffff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 5px;
-        z-index: 3;
+            position: fixed;
+            height: 450px;
+            width: 600px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            z-index: 3;
         }
+
         #addGuiHeader {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 50px;
         }
+
         #addGuiHeader span {
-        margin-left: 5%;
-        font-size: 20px;
+            margin-left: 5%;
+            font-size: 20px;
         }
+
         #addGuiHeader button {
-        font-size: 20px;
-        background: none;
-        border: none;
-        margin-right: 5%;
+            font-size: 20px;
+            background: none;
+            border: none;
+            margin-right: 5%;
         }
+
         .modalBackground {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        z-index: 2;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 2;
         }
+
         .line {
-        margin-left: 5%;
-        margin-right: 5%;
+            margin-left: 5%;
+            margin-right: 5%;
         }
+
         #addGui p {
-        margin-left: 5%;
-        margin-right: 5%;
+            margin-left: 5%;
+            margin-right: 5%;
         }
+
         #addGui .input {
-        margin-left: 5%;
-        width: 90%;
-        height: 8%;
-        margin-right: 5%;
-        border-radius: 5px;
+            margin-left: 5%;
+            width: 90%;
+            height: 8%;
+            margin-right: 5%;
+            border-radius: 5px;
         }
+
         .inputSpace {
-        margin-left: 5%;
+            margin-left: 5%;
         }
+
         #listAddButton {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
+
         #listAddButton {
-        margin-left: 5%;
-        margin-right: 5%;
+            margin-left: 5%;
+            margin-right: 5%;
         }
+
         #addButton {
-        background-color: #007AFF;
-        border-radius: 5px;
-        border: none;
-        color: white;
-        height: 30px;
-        width: 60px;
+            background-color: #007AFF;
+            border-radius: 5px;
+            border: none;
+            color: white;
+            height: 30px;
+            width: 60px;
         }
+
         #declineButton {
-        background-color: white;
-        border: 1px solid black;
-        height: 30px;
-        width: 50px;
-        border-radius: 5px;
+            background-color: white;
+            border: 1px solid black;
+            height: 30px;
+            width: 50px;
+            border-radius: 5px;
         }
+
         .red {
-        color: red;
+            color: red;
         }
+
         .statusOff {
-        color: red;
-        background-color: #DC8A8A;
-        border-radius: 5px;
+            color: red;
+            background-color: #DC8A8A;
+            border-radius: 5px;
         }
+
         .statusOn {
-        color: green;
-        background-color: #ECFDF3;
-        border-radius: 5px;
+            color: green;
+            background-color: #ECFDF3;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -230,15 +256,15 @@
         let dataName = "listS35B5";
 
         function getData() {
-        return JSON.parse(localStorage.getItem(dataName)) || [];
+            return JSON.parse(localStorage.getItem(dataName)) || [];
         }
 
         function showAddGui() {
-        document.getElementById("addGui").classList.toggle("hide");
+            document.getElementById("addGui").classList.toggle("hide");
         }
 
         function render() {
-        let message = `
+            let message = `
         <tr>
             <td class="td1 tdHeader">Ma danh muc <i class="fa-solid fa-arrow-down"></i></td>
             <td class="td2 tdHeader">Ten danh muc <i class="fa-solid fa-arrow-down"></i></td>
@@ -246,13 +272,15 @@
             <td class="td4 tdHeader">Chuc nang</td>
         </tr>
         `;
-        let list = getData();
-        for (let i = 0; i < list.length; i++){ let statusMess="" ; if (list[i].status==="Dang hoat dong" ) {
-            statusMess=`<td class="td3"><mark class="statusOn">&bull; ${list[i].status}</mark></td>`;
-            } else {
-            statusMess = `<td class="td3"><mark class="statusOff">&bull; ${list[i].status}</mark></td>`;
-            }
-            message += `
+            let list = getData();
+            for (let i = 0; i < list.length; i++) {
+                let statusMess = "";
+                if (list[i].status === "Dang hoat dong") {
+                    statusMess = `<td class="td3"><mark class="statusOn">&bull; ${list[i].status}</mark></td>`;
+                } else {
+                    statusMess = `<td class="td3"><mark class="statusOff">&bull; ${list[i].status}</mark></td>`;
+                }
+                message += `
             <tr>
                 <td class="td1">${list[i].id}</td>
                 <td class="td2">${list[i].name}</td>
@@ -263,27 +291,48 @@
             `;
             }
             document.getElementById("fontTable").innerHTML = message;
-            }
-            function addItem() {
+        }
+
+        function addItem() {
             let idInput = document.getElementById("inputID").value.trim();
             let nameInput = document.getElementById("inputName").value.trim();
             if (idInput && nameInput) {
-            let list = getData();
-            document.getElementById("errorIDAlert").classList.add("hide");
-            document.getElementById("errorNameAlert").classList.add("hide");
-            for (let i = 0; i < list.length; i++){ if (idInput===list[i].id) {
-                document.getElementById("errorIDAlert").classList.remove("hide");
-                document.getElementById("errorIDAlert").innerHTML="ID bi trung lap moi nhap lai!!" ; return; } } let
-                status=document.querySelector('input[name="status" ]:checked').value; let temp={ id: idInput, name:
-                nameInput, status }; list.push(temp); localStorage[dataName]=JSON.stringify(list);
-                document.getElementById("inputID").value="" ; document.getElementById("inputName").value="" ;
-                document.querySelector('input[name="status" ]').checked=true; render(); showAddGui(); } else if
-                (!idInput && !nameInput) { document.getElementById("errorIDAlert").classList.remove("hide");
-                document.getElementById("errorNameAlert").classList.remove("hide"); } else if (!nameInput) {
+                let list = getData();
                 document.getElementById("errorIDAlert").classList.add("hide");
-                document.getElementById("errorNameAlert").classList.remove("hide"); } else if (!idInput) {
+                document.getElementById("errorNameAlert").classList.add("hide");
+                for (let i = 0; i < list.length; i++) {
+                    if (idInput === list[i].id) {
+                        document.getElementById("errorIDAlert").classList.remove("hide");
+                        document.getElementById("errorIDAlert").innerHTML = "ID bi trung lap moi nhap lai!!";
+                        return;
+                    }
+                }
+                let
+                    status = document.querySelector('input[name="status" ]:checked').value;
+                let temp = {
+                    id: idInput,
+                    name: nameInput,
+                    status
+                };
+                list.push(temp);
+                localStorage[dataName] = JSON.stringify(list);
+                document.getElementById("inputID").value = "";
+                document.getElementById("inputName").value = "";
+                document.querySelector('input[name="status" ]').checked = true;
+                render();
+                showAddGui();
+            } else if (!idInput && !nameInput) {
                 document.getElementById("errorIDAlert").classList.remove("hide");
-                document.getElementById("errorNameAlert").classList.add("hide"); } } render()
+                document.getElementById("errorNameAlert").classList.remove("hide");
+            } else if (!nameInput) {
+                document.getElementById("errorIDAlert").classList.add("hide");
+                document.getElementById("errorNameAlert").classList.remove("hide");
+            } else if (!idInput) {
+                document.getElementById("errorIDAlert").classList.remove("hide");
+                document.getElementById("errorNameAlert").classList.add("hide");
+            }
+        }
+        render()
     </script>
 </body>
 
